--- a/css/main.css
+++ b/css/main.css
@@ -21,11 +21,12 @@ a {
 #header .wrapper {
   justify-content: space-between;
 }
-#header .wrapper .header__logo.mobile {
-  content: url("../../images/footer_logo.svg");
-  position: fixed;
-  left: 10%;
-  z-index: 100;
+@media screen and (max-width: 768px) {
+  #header .wrapper .header__logo.mobile {
+    position: fixed;
+    left: 10%;
+    z-index: 100;
+  }
 }
 @media screen and (max-width: 48rem) {
   #header .wrapper .header__navigation {
