--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,11 +5,12 @@
     justify-content: space-between;
 
     .header__logo {
-      &.mobile {
-        content: url('../../images/footer_logo.svg');
-        position: fixed;
-        left: 10%;
-        z-index: 100;
+      @media screen and (max-width: 768px) {
+        &.mobile {
+          position: fixed;
+          left: 10%;
+          z-index: 100;
+        }
       }
     }
 
@@ -21,8 +22,10 @@
         width: 100%;
         height: 100%;
         z-index: 10;
-        -webkit-animation: scale-in-ver-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: scale-in-ver-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        -webkit-animation: scale-in-ver-top 0.5s
+          cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+        animation: scale-in-ver-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+          both;
 
         &::before {
           content: "";
@@ -181,16 +184,16 @@
         position: fixed;
         right: 10%;
         z-index: 10;
-  
+
         .header__top {
           transform: rotate(45deg) translateY(0.375rem) translate(0.375rem);
           background: #fff;
         }
-  
+
         .header__middle {
           display: none;
         }
-  
+
         .header__bottom {
           transform: rotate(-45deg) translateY(0.375rem) translate(-0.375rem);
           background: #fff;
